--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.3.0",
+    "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "^5.2.0",
